# django-rest-framework-client

./: .coverage  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  example.py  pyproject.toml  requirements-build.txt  requirements-test.txt  setup.py  tox.ini
.github/workflows/: build.yml  python-publish.yml
drf_client/: __init__.py  connection.py  exceptions.py
drf_client/helpers/: base_facade.py  base_main.py
restframeworkclient/: connection.py
tests/: __init__.py  api.py  helpers.py  resources.py  test_api.py  test_resources.py
