[project]
name = "django-rest-framework-client"
version = "0.13.0"
description = "Python client for a DjangoRestFramework based web site"
authors = [
    {name = "David Karchmer", email = "dkarchmer@gmail.com"},
]
dependencies = [
    "requests",
    "httpx>=0.28.1",
    "respx>=0.22.0",
]
requires-python = ">=3.10,<4"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["django", "djangorestframework", "drf", "rest-client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/dkarchmer/django-rest-framework-client"
Repository = "https://github.com/dkarchmer/django-rest-framework-client"

[dependency-groups]
dev = [
    "pytest~=9.0",
    "ruff>=0.5.5",
    "coverage>=7.6.0",
    "mock>=5.1.0",
    "requests-mock>=1.12.1",
    "pre-commit>=3.7.1",
    "ty~=0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["drf_client"]

[tool.ruff]
line-length = 120
preview = true
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # The following rules may cause conflicts when used with the ruff formatter and should be disabled:
    "COM812",

    "CPY001",
    "S",
    "PLR6301",
    "ANN002",
    "ANN003",
    "D203", "D212",  # D203 and D211, D212 and D213 are mutually exclusive
    "SLF001",
    "PLR0904",
    "PLR2004",
    "N818",
]
